# onyx-gate

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml
board/onyx-gate/: grub.cfg  post-build.sh
board/onyx-gate/rootfs-overlay/etc/init.d/: S99onyx-pba
configs/buildroot/: onyx_defconfig  onyx_gate_defconfig
configs/grub/: grub.cfg
docs/: CONTRIBUTING.md  _config.yml  docs.md  download.md  index.html
scripts/: build-onyx-gate.sh  clean-all.sh
src/: CMakeLists.txt  logger.c  main.c
tests/: CMakeLists.txt  test_logger.cpp
